--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,47 @@
-HELP.md
-.gradle
+### Build ###
+.gradle/
 build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### STS ###
-.apt_generated
+### Gradle Wrapper ###
+!gradle/wrapper/gradle-wrapper.jar
+gradle-wrapper.properties
+gradle-wrapper/
+
+### Logs ###
+*.log
+
+### IntelliJ IDEA ###
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+### Eclipse / STS ###
+.apt_generated/
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
-.sts4-cache
+.sts4-cache/
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
 ### VS Code ###
 .vscode/
+
+### OS / System ###
+.DS_Store
+Thumbs.db
+
+### Optional (for cleaner commits) ###
+*.swp
+*.bak
+*.tmp
