--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,44 @@
-### Build ###
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+hs_err_pid*
+
+### Gradle ###
 .gradle/
 build/
-
-### Gradle Wrapper ###
+out/
 !gradle/wrapper/gradle-wrapper.jar
-gradle-wrapper.properties
-gradle-wrapper/
-
-### Logs ###
-*.log
 
 ### IntelliJ IDEA ###
 .idea/
 *.iml
-*.iws
 *.ipr
-out/
+*.iws
 
-### Eclipse / STS ###
-.apt_generated/
-.classpath
-.factorypath
+### Eclipse ###
 .project
+.classpath
 .settings/
-.springBeans
-.sts4-cache/
-bin/
-
-### NetBeans ###
-nbproject/private/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
 
 ### VS Code ###
 .vscode/
 
-### OS / System ###
-.DS_Store
+### OS Specific ###
+# Windows
 Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 
-### Optional (for cleaner commits) ###
-*.swp
-*.bak
-*.tmp
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+### Logs ###
+logs/
+*.log
+
+### Other ###
+HELP.md
